# poc-json-pyodide-validation

./: Makefile  index.html  json-validator.js  pyodide-loader.js  pyproject.toml
gitlab_source/: README.md  config.yaml  main.py  requirements.txt
tests/: conftest.py  structural_invalid_data.json  structural_valid_data.json  test_all_validators.py
tests/data/: empty_data.json  invalid_chat_data.json  valid_chat_data.json
validators/: README.md  base_validator.py
validators/Gate 1 - Structural validation/: chat_struct_validator.py
validators/gate1_structural_validation/: chat_struct_validator.py
validators/gate2_deduplication_and_decontamination/: deduplication_validator.py
validators/gate3_availability/: link_availability_validator.py
validators/gate4_content_consistency/: language_consistency_validator.py
validators/gate5_data_distribution/: README.md  dialog_balance_validator.py
validators/gate6_quantity_check/: quantity_size_validator.py
validators/gate8_guardrail_compliance/: guardrail_compliance_validator.py
validators/gateX_remote_validation/: remote_item_proxy_validator.py  remote_proxy_validator.py
