[project]
name = "poc-json-pyodide-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "js>=1.0",
    "langdetect>=1.0.9",
    "pydantic>=2.11.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.4",
]

[tool.pytest.ini_options]
addopts = "-s"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
